# frappe_property_care

./: README.md  pyproject.toml
property_care/: hooks.py  modules.txt
property_care/fixtures/: custom_field.json  property_setter.json  workflow_state.json
